# CPC-UNIFEI-FW

./: .gitignore  .gitmodules  README.md  cpc-unifei-eth.sln
cpc-unifei-eth/: .cproject  .mxproject  .project  CMakeLists.txt  STM32H723ZGTX_FLASH.ld  ads8686s.c  ads8686s.h  ads8686s_interface.c  ads8686s_interface.h  ads8686s_low_level.c  ads8686s_low_level.h  application.c  application.h  command_system.c  command_system.h  command_system_interface.c  command_system_interface.h  commands.c  commands.h  communication.c  communication.h  config.c  config.h  cpc-unifei-eth.ioc  cpc-unifei-eth.vgdbcmake  cpc-unifei-eth2.ioc  debug.h  ethernet_frames.c  ethernet_frames.h  goose.c  goose.h  goose_frame.h  goose_server.c  goose_server.h  is25lp064a.c  is25lp064a.h  lua_interface.c  lua_interface.h  lwiperf.c  nor_flash.c  (+13 more)
cpc-unifei-eth/Core/Inc/: main.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
cpc-unifei-eth/TraceReports/: 04_11_2024_23_18_38.vgdbtrace  04_11_2024_23_36_43.vgdbtrace  05_11_2024_23_06_06.vgdbtrace  05_11_2024_23_29_54.vgdbtrace  25_09_2024_18_54_55.vgdbtrace  26_10_2024_15_10_25.vgdbtrace  26_10_2024_17_16_22.vgdbtrace  8_14_2024_7_49_24_PM.vgdbtrace  8_15_2024_7_49_19_PM.vgdbtrace  8_28_2024_12_39_14_AM.vgdbtrace  8_30_2024_10_59_42_PM.vgdbtrace  8_31_2024_9_25_46_AM.vgdbtrace  9_12_2024_12_58_19_PM.vgdbtrace  9_12_2024_1_37_15_PM.vgdbtrace  9_1_2024_6_06_19_PM.vgdbtrace  9_2_2024_7_17_13_PM.vgdbtrace
cpc-unifei-eth/iec61850/: goose.c  goose_publisher.c
cpc-unifei-eth/src/: ANSI21.c  ANSI50.c  ANSI51.c  ANSI67.c  ANSI87B.c  cpc_complex.c
(+20 files in other folders)
